add an item to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Weav</string>
+    <string name="sentence">Choose the image &amp; Start to work</string>
 </resources>
